--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 				<a href="favorites.html">Favorites</a>
 			</div>
 		<a class="menu-icon" onclick="hamburger()">
-				<div>&#9776;<div>
+				<div>&#9776;</div>
 			</a>
 		</nav>
 <!--end-->
