--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<a href="favorites.html">Favorites</a>
 			</div>
 		<a class="menu-icon" onclick="hamburger()">
-				<div>&#9776;<div>
+				<div>&#9776;</div>
 			</a>
 		</nav>
 <!--end-->
