--- a/about.html
+++ b/about.html
@@ -17,9 +17,10 @@
 	
 	<header id="ffc-logo"><h1>Facts about me. &#128158;</h1> </header>
 	<figure>
-		
+		<img src="images/portfolio3.jpg" alt="a picture taken in photobooth" class="center">
+		<figcaption>end global warming</figcaption>
+		</figure>
 	
-		<!--Mobile navigation-->
 		<nav class="mobilenav">
 			<div id="menu-links">
 				<a href="index.html" >Home</a>
@@ -27,23 +28,23 @@
 				<a href="contact.html">Contact Me</a>
 				<a href="about.html">More about me</a>
 				<a href="new.html">The steps of meditation</a>
-				<a href="favorites.html">Favorites</a>
+				<a href="favorites.html"> Favorites</a>
 			</div>
 		<a class="menu-icon" onclick="hamburger()">
-				<div>&#9776;</div>
+				<div>&#9776;<div>
 			</a>
 		</nav>
-<!--end-->
-
+	<!--end-->
+	
 	<nav class="tablet-desktop">
 			<ul>
-
+	
 			<li><a href="index.html">Home</a> &nbsp; &#9632; &nbsp;</li>
 			<li><a href="projects.html">Projects</a> &nbsp; &#9632; &nbsp; </li>
 			<li><a href="contact.html">Contact Me</a> &nbsp; &#9632; &nbsp;</li>
 			<li><a href="about.html">More about me</a></li>
 			<li><a href="new.html">The steps of meditation</a></li>
-			<li><a href="favorites.html">Favorites</a></li>
+			<li><a href="favorites.html"> Favorites</a></li>
 			</ul>
 	</nav>
 	
@@ -149,5 +150,5 @@
 	
 	
 	</footer>
-		<script src="scripts/script.js"></script>
+	<script src="scripts/script.js"></script>
 </body>
