--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
 	</nav>
 	
 	<main>
-	<article id="info">
+	<article id="info" class="color">
 		<h3> My Favorite shows to watch from most favorite to least:</h3>
 		<ol>
 			<li> pretty little liars</li>
@@ -91,7 +91,7 @@
 
 		
 
-		<form>
+		<form class="color">
 			<h2 class="contact">Please complete the form, hit submit when you're finished.</h2>
 			<fieldset>
 				<legend>Personal information</legend>
