--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 
 
 	</head>
-	
+	<meta name="description" content="Hone page for Noah Robinsons portfolio">
 	<section >
 		
 		<header id="ffc-logo"> <h1 id="text">Welcome to Noahs Portfolio. &#128158;</h1> </header>
 
 	 <body>
+		 <
 		
 	
 	
