--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-
+		
+	<meta name="description" content="Home page for Noah Robinsons portfolio">
 
 	</head>
-	<meta name="description" content="Hone page for Noah Robinsons portfolio">
+
 	<section >
 		
 		<header id="ffc-logo"> <h1 id="text">Welcome to Noahs Portfolio. &#128158;</h1> </header>
 
 	 <body>
-		 <
+		 
 		
 	
 	
