--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 	<meta charset="utf-8">
 		<title>Contact me</title>
 		<link rel="stylesheet" href="css/styles.css">
-		<meta name="description" content="Contact noah robinson">
+		<meta name="description" content="Contact page for noah robinsons portfolio">
 	</head> 
 <body>
 	
