--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@
 	<meta charset="utf-8">
 	<title>Noah's Portfolio</title>
 	<link rel="stylesheet" href="css/styles.css">
+			<meta name="description" content="Projects page for noah robinsons portfolio">
 	</head> 
 <header class="center" id="ffc-logo"> <h1>Welcome to Noahs Portfolio. &#128158;</h1></header>
 
