--- a/favorites.html
+++ b/favorites.html
@@ -7,6 +7,7 @@
 	<meta charset="utf-8">
 	<title>Noah's Portfolio</title>
 	<link rel="stylesheet" href="css/styles.css">
+	<meta name="description" content="Favorites page for noah robinsons portfolio">
 	</head> 
 <body>
 	<header id="ffc-logo"> <h1> My Favorites. &#128158;</h1> </header>
