--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
 	<meta charset="utf-8">
 	<title>about me</title>
 	<link rel="stylesheet" href="css/styles.css">
+			<meta name="description" content="Home page for Noah Robinsons portfolio">
 	</head> 
 	
 <body>
