--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
 	<title>about me</title>
 	<link rel="stylesheet" href="css/styles.css">
 			<meta name="description" content="Home page for Noah Robinsons portfolio">
+				<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	</head> 
 	
 <body>
@@ -148,7 +149,8 @@
  
 			<p> <a href="mailto/robinson.noah@stu.cvccworks.edu">email me</a></p>
 			<p>&copy; Copyright 2023. All Rights Reserved.</p>
-	
+		a href="https://www.instagram.com/ilynoahxo?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" class="fa fa-instagram"></a>
+			<a href="https://x.com/ilynoahxo?s=20" class="fa fa-twitter"></a>	
 	
 	</footer>
 	<script src="scripts/script.js"></script>
