--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+				<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		
 	<meta name="description" content="Home page for Noah Robinsons portfolio">
 
@@ -67,8 +68,8 @@
 	<p> <a href="mailto:robinson.noah@stu.cvccworks.edu">email me</a></p>
 			<p>&copy; Copyright 2023. All Rights Reserved.</p>
 		
-	
-	
+	<a href="https://www.instagram.com/ilynoahxo?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" class="fa fa-instagram"></a>
+			<a href="https://x.com/ilynoahxo?s=20" class="fa fa-twitter"></a>	
 	</footer>
 	<script src="scripts/script.js"></script>
 </div>
