--- a/favorites.html
+++ b/favorites.html
@@ -7,7 +7,8 @@
 	<meta charset="utf-8">
 	<title>Noah's Portfolio</title>
 	<link rel="stylesheet" href="css/styles.css">
-	<meta name="description" content="Favorites page for noah robinsons portfolio">
+	<meta name="description" content="Favorites page for noah robinsons portfolio">		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		
 	</head> 
 <body>
 	<header id="ffc-logo"> <h1> My Favorites. &#128158;</h1> </header>
@@ -88,8 +89,8 @@
  
 			<p> <a href="robinson.noah@stu.cvccworks.edu">email me</a></p>
 			<p>&copy; Copyright 2023. All Rights Reserved.</p>
-	
-	
+				<a href="https://www.instagram.com/ilynoahxo?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" class="fa fa-instagram"></a>
+			<a href="https://x.com/ilynoahxo?s=20" class="fa fa-twitter"></a>	
 	</footer>
     <script src="scripts/script.js"></script>
 </body>
