--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,8 @@
 		<title>Contact me</title>
 		<link rel="stylesheet" href="css/styles.css">
 		<meta name="description" content="Contact page for noah robinsons portfolio">
+				<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		
 	</head> 
 <body>
 	
@@ -60,7 +62,8 @@
 <!-- The purpose is for contatc information, dynamic -->
 			<p></p>
 			<p>&copy; Copyright 2021. All Rights Reserved.</p>
-	
+					<a href="https://www.instagram.com/ilynoahxo?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" class="fa fa-instagram"></a>
+			<a href="https://x.com/ilynoahxo?s=20" class="fa fa-twitter"></a>	
 	
 	</footer>
 		<script src="scripts/script.js"></script>
