--- a/fitness/index.html
+++ b/fitness/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title> Forward Fitness Club </title>
+	<title>Complete Fitness - Free Trial | Forward Fitness Club </title>
 	<link rel="stylesheet" href="css/styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" context="The Forward Fitness Club is an athlete fitness center dedicated to helping clients acheive their fitness and nutrition goals.">
