--- a/fitness/index.html
+++ b/fitness/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Complete Fitness - Free Trial | Forward Fitness Club </title>
-	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="css/styles.min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" context="The Forward Fitness Club is an athlete fitness center dedicated to helping clients acheive their fitness and nutrition goals.">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
