--- a/projects.html
+++ b/projects.html
@@ -63,6 +63,7 @@
 		<div class="grid-item"><a href="chapter12/apply/index.html">Chapter 12 apply</a>a></div>
 		<div class="grid-item"><a href="chapter/js01.html">Javascript ch 1</a>a></div>
 		<div class="grid-item"><a href="chapter/js01b.html">Javascript ch 1 b</a>a></div>
+		<div class="grid-item"><a href="chapter/project01/projectONEjs.html">JS chapter one project one</a>a></div>
 		<div class="grid-item"><audio controls>
 			<source src="media/yellowstone-fish.mp3">
 			<source src="media/yellowstone-fish.ogg">
