--- a/projects.html
+++ b/projects.html
@@ -65,7 +65,8 @@
 		<div class="grid-item"><a href="chapter/js01b.html">Javascript ch 1 b</a>a></div>
 		<div class="grid-item"><a href="chapter/project01/projectONEjs.html">JS chapter one project one</a>a></div>
 		<div class="grid-item"><a href="project02/project01-02.html">JS chapter one project two</a>a></div>
-		<div class="grid-item"><a href="project03/project01-.html">JS chapter one project two</a>a></div>
+		<div class="grid-item"><a href="project03/project01-03.html">JS chapter one project three</a>a></div>
+		
 		<div class="grid-item"><audio controls>
 			<source src="media/yellowstone-fish.mp3">
 			<source src="media/yellowstone-fish.ogg">
