--- a/projects.html
+++ b/projects.html
@@ -64,9 +64,9 @@
 		<div class="grid-item"><a href="chapter/js01.html">Javascript ch 1</a>a></div>
 		<div class="grid-item"><a href="chapter/js01b.html">Javascript ch 1 b</a>a></div>
 		<div class="grid-item"><a href="chapter/project01/projectONEjs.html">JS chapter one project one</a>a></div>
-		<div class="grid-item"><a href="project02/project01-02.html">JS chapter one project two</a>a></div>
-		<div class="grid-item"><a href="project03/project01-03.html">JS chapter one project three</a>a></div>
-		
+		<div class="grid-item"><a href="js01/project02/project01-02.html">JS chapter one project two</a>a></div>
+		<div class="grid-item"><a href="js01/project03/project01-03.html">JS chapter one project three</a>a></div>
+		<div class="grid-item"><a href="js01/project03/project01-03.html">JS chapter one project tfour</a>a></div>
 		<div class="grid-item"><audio controls>
 			<source src="media/yellowstone-fish.mp3">
 			<source src="media/yellowstone-fish.ogg">
