--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,7 @@
 		<div class="grid-item"><a href="chapter/project01/projectONEjs.html">JS chapter one project one</a>a></div>
 		<div class="grid-item"><a href="js01/project02/project01-02.html">JS chapter one project two</a>a></div>
 		<div class="grid-item"><a href="js01/project03/project01-03.html">JS chapter one project three</a>a></div>
-		<div class="grid-item"><a href="js01/project03/project01-03.html">JS chapter one project tfour</a>a></div>
+		<div class="grid-item"><a href="js01/project05/project01-05.html">JS chapter one project five</a>a></div>
 		<div class="grid-item"><audio controls>
 			<source src="media/yellowstone-fish.mp3">
 			<source src="media/yellowstone-fish.ogg">
