--- a/projects.html
+++ b/projects.html
@@ -60,13 +60,13 @@
 		<div class="grid-item"><a href="chapter10/apply/index.html">Chapter 10 apply</a></div>
 		<div class="grid-item"><a href="chapter12/fitness-bootstrap/index.html">Chapter 12 fitness</a></div>
 		<div class="grid-item"><a href="chapter12/extend/index.html">Chapter 12 extend</a></div>
-		<div class="grid-item"><a href="chapter12/apply/index.html">Chapter 12 apply</a>a></div>
-		<div class="grid-item"><a href="chapter/js01.html">Javascript ch 1</a>a></div>
-		<div class="grid-item"><a href="chapter/js01b.html">Javascript ch 1 b</a>a></div>
-		<div class="grid-item"><a href="chapter/project01/projectONEjs.html">JS chapter one project one</a>a></div>
-		<div class="grid-item"><a href="js01/project02/project01-02.html">JS chapter one project two</a>a></div>
-		<div class="grid-item"><a href="js01/project03/project01-03.html">JS chapter one project three</a>a></div>
-		<div class="grid-item"><a href="js01/project05/project01-05.html">JS chapter one project five</a>a></div>
+		<div class="grid-item"><a href="chapter12/apply/index.html">Chapter 12 apply</a></div>
+		<div class="grid-item"><a href="chapter/js01.html">Javascript ch 1</a></div>
+		<div class="grid-item"><a href="chapter/js01b.html">Javascript ch 1 b</a></div>
+		<div class="grid-item"><a href="chapter/project01/projectONEjs.html">JS chapter one project one</a></div>
+		<div class="grid-item"><a href="js01/project02/project01-02.html">JS chapter one project two</a></div>
+		<div class="grid-item"><a href="js01/project03/project01-03.html">JS chapter one project three</a></div>
+		<div class="grid-item"><a href="js01/project05/project01-05.html">JS chapter one project five</a></div>
 		<div class="grid-item"><audio controls>
 			<source src="media/yellowstone-fish.mp3">
 			<source src="media/yellowstone-fish.ogg">
