--- a/js01/project04/project01-04.html
+++ b/js01/project04/project01-04.html
@@ -36,7 +36,7 @@
                 homeStreet <br>
                 homeCity, homeState, homeCode
                </script>
-               <input type="radio" id="homeoption" name="shippingaddr" onclick="document.getElementById('street').innerHTML = homeStreet" onclick="document.getElementById('city').innerHTML = homeCity" onclick="document.getElementById('state').innerHTML = homeState" onclick="document.getElementById('code').innerHTML = homeCode"/>
+               <input type="radio" id="homeoption" name="shippingaddr" onclick="document.getElementById('street').value = homeStreet" onclick="document.getElementById('city').value = homeCity" onclick="document.getElementById('state').value = homeState" onclick="document.getElementById('code').value = homeCode"/>
             </label>
             <label for="workoption" id="workaddr">
                <div>Work</div>
@@ -44,7 +44,7 @@
                 workStreet <br>
                 workCity, workState, workCode
                </script>
-               <input type="radio" id="workoption" name="shippingaddr" onclick="document.getElementById('street').innerHTML = workStreet" onclick="document.getElementById('city').innerHTML = workCity" onclick="document.getElementById('state').innerHTML = workState" onclick="document.getElementById('code').innerHTML = workCode"/>
+               <input type="radio" id="workoption" name="shippingaddr" onclick="document.getElementById('street').value = workStreet" onclick="document.getElementById('city').value = workCity" onclick="document.getElementById('state').value = workState" onclick="document.getElementById('code').value = workCode"/>
             </label>
          </fieldset>
          
