--- a/projects.html
+++ b/projects.html
@@ -67,6 +67,7 @@
 		<div class="grid-item"><a href="js01/project02/project01-02.html">JS chapter one project two</a></div>
 		<div class="grid-item"><a href="js01/project03/project01-03.html">JS chapter one project three</a></div>
 		<div class="grid-item"><a href="js01/project05/project01-05.html">JS chapter one project five</a></div>
+		<div class="grid-item"><a href="js01/project04/project01-04.html">JS chapter one project four</a></div>
 		<div class="grid-item"><audio controls>
 			<source src="media/yellowstone-fish.mp3">
 			<source src="media/yellowstone-fish.ogg">
