--- a/projects.html
+++ b/projects.html
@@ -69,6 +69,7 @@
 		<div class="grid-item"><a href="js01/project04/project01-04.html">JS chapter one project four</a></div>
 		<div class="grid-item"><a href="js01/project05/project01-05.html">JS chapter one project five</a></div>
 		<div class="grid-item"><a href="js02/project01/project02-01.html">JS chapter two project one</a></div>
+		<div class="grid-item"><a href="js04/project01/project04-01.html">JS chapter four project one</a></div>
 		<div class="grid-item"><audio controls>
 			<source src="media/yellowstone-fish.mp3">
 			<source src="media/yellowstone-fish.ogg">
